Prepare to replace using Results